--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,74 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+html {
+  display: block;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  width: 100vw;
+  height: 100vh;
+  /* overflow: hidden; */
+}
+/* *::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+} */
+.topBar {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 2%;
+  right: 1%;
+  z-index: 10;
+  width: fit-content;
+  height: fit-content;
+  align-items: flex-end;
+  justify-content: center;
+}
+.topBar > * {
+  font-size: 1.2rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  opacity: 0.2;
+  font-weight: 600;
+}
+
+#CanvasContainer {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#gameWindow {
+  background: rgb(112, 112, 200);
+  z-index: 5;
+}
+#loadingScreen {
+  display: flex;
+  height: 80%;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+}
+#framer {
+  position: absolute;
+  right: 0%;
+  top: 80%;
+  border-radius: 1em;
+  padding: 1em;
+  z-index: 999;
+  background-color: darkslategrey;
+  width: 10em;
+  height: 5em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: small;
+  color: yellow;
+  border: 2px solid yellow;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  text-wrap: nowrap;
 }
