--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,6 +9,7 @@ html {
 body {
   width: 100vw;
   height: 100vh;
+  position: relative;
   /* overflow: hidden; */
 }
 /* *::-webkit-scrollbar {
@@ -35,7 +36,7 @@ body {
 }
 
 #CanvasContainer {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
