--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,7 @@ body {
   width: 100vw;
   height: 100vh;
   position: relative;
+  background-color: black;
   /* overflow: hidden; */
 }
 /* *::-webkit-scrollbar {
